@@ -1460,7 +1460,7 @@ She was very hungry; she was still rather breathless. She felt a little "spun ro
 
 "Sanders Curry," said Eleanor.
 
-'Then it'll last till Domesday," said the Colonel.
+"Then it'll last till Domesday," said the Colonel.
 
 "Which Court's he sitting in?" he asked.
 
@@ -5399,7 +5399,7 @@ She nodded.
 
 He made a noise like "Pah!"
 
-"'Pah.' That's what I said," she laughed. "'Pah!'--when I went into the bathroom on a cold winter's morning--'Pah!'--she threw her hand out--"'Pah!'" She paused.
+"'Pah.' That's what I said," she laughed. "'Pah!'--when I went into the bathroom on a cold winter's morning--'Pah!'"--she threw her hand out--"'Pah!'" She paused.
 
 "And then--?" he asked.
 
