@@ -40,10 +40,11 @@ def clean_and_read_text(input_text):
 
 def quotations_check(filename):
     """Checks if a file has an even number of quotes."""
-    if count_quotation_marks(filename) % 2 != 0:
+    text = clean_and_read_text(filename)
+    if count_quotation_marks(text) % 2 != 0:
         print("%(filename)s has an odd number of quotation marks." % locals())
         pause()
-    elif count_quotation_marks(filename) < 50:
+    elif count_quotation_marks(text) < 50:
         print("%(filename)s has a very low number of quotation marks." % locals())
         pause()
     elif percent_quoted(filename) > 30:
@@ -52,12 +53,11 @@ def quotations_check(filename):
     else:
         print("%(filename)s checks out." % locals())
 
-def count_quotation_marks(filename):
-    text = clean_and_read_text(filename)
+def count_quotation_marks(text):
     return len(list(re.finditer(r'"', text)))
 
 
-def check_quote_length(filename):
+def print_long_quotes(filename):
     """Iterates over the matches and returns the first one that is greater than 100 characters.
     Not exact, but it will give a sense of when a quotation mark is missing and
     it starts flagging everything as quoted."""
@@ -82,14 +82,13 @@ def print_matches_for_debug(filename):
 
 
 def find_quoted_quotes(input_text):
-    """This returns the regex matches from finding the quoted quotes."""
-    return list(re.finditer(r'"[^"]+"', input_text))
-
-
-def find_quoted_single_quotes(input_text):
-    """Returns the regex matches from finding the quoted quotes where 
-    dialogue is signaled using single quotation marks."""
-    return list(re.finditer(r'\'[^\']+\'', input_text))
+    """This returns the regex matches from finding the quoted quotes. Note: if the number of 
+    quotation marks is less than fifty it assumes that single quotes are used to designate
+    dialogue."""
+    if count_quotation_marks(input_text) < 50:
+        return list(re.finditer(r'\'[^\']+\'', input_text))
+    else:
+        return list(re.finditer(r'"[^"]+"', input_text))
 
 
 def create_location_histogram(file, bin_count=500):
@@ -361,8 +360,9 @@ def main():
     #     'Raw Frequencies', CountVectorizer, files, tokenizer=remove_short,
     #     )
     # vectorizer_report('Tf-Idf', TfidfVectorizer, files, tokenizer=remove_short)
-    text = clean_and_read_text("corpus/between_the_acts.txt")
-    find_quoted_single_quotes(text)
+    for (root, _, files) in os.walk(CORPUS):
+        for fn in files:
+            quotations_check(os.path.join(root, fn))
 if __name__ == '__main__':
     main()
 
